--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,9 @@
   <body>
     <h1>Component Library</h1>
     <p>JS Component Library for the JavaScript for WordPress Course.</p>
+
+    <div id="app"></div>
+
     <script src="/js/index.js"></script>
   </body>
 </html>
